# FormulaSlug-Firmware-Onboarding-Project

./: CMakeLists.txt  README.md  main.cpp
